# mch2022-workshop-streaming

./: .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
streaming/: config.py  geten.py  logging.conf  main.py
streaming/miniflux/: agents.py
streaming/miniflux/utils/: records.py  transforms.py
streaming/nvd/: agents.py
streaming/nvd/utils/: api.py  schema.py  transforms.py
streaming/twitter/: agents.py
streaming/twitter/utils/: records.py  test.py  transforms.py
tests/: test_streaming.py
